# petalTongue

./: .docs-manifest.txt  .gitignore  00_START_HERE.md  ALL_PHASES_COMPLETE.md  AUDIO_SETUP.md  AUDIO_SOVEREIGNTY_EVOLUTION.md  AUDIT_ACTION_ITEMS.md  AUDIT_COMPLETE_NEXT_PHASE.md  AUDIT_REPORTS_INDEX.md  BINGOCUBE_EXTRACTION_COMPLETE.md  BINGOCUBE_WHITEPAPER_COMPLETE.md  BIOMEOS_60_PERCENT_COMPLETE.md  BIOMEOS_80_PERCENT_COMPLETE.md  BIOMEOS_INTEGRATION_COMPLETE.md  BIOMEOS_INTEGRATION_EVOLUTION.md  BIOMEOS_INTEGRATION_RESPONSE.md  BIOMEOS_INTEGRATION_TRACKING.md  BIOMEOS_SESSION_1_PROGRESS.md  BIOMEOS_WEEK1_COMPLETE.md  BUILD_INSTRUCTIONS.md  BUILD_REQUIREMENTS.md  CHANGELOG.md  CLEANUP_ANALYSIS.md  CLEANUP_COMPLETE_JAN_3_2026.md  CLEANUP_SUMMARY.md  CODE_EVOLUTION_EXECUTION_SUMMARY.md  CODE_REVIEW_JAN_3_2026.md  COLLABORATIVE_INTELLIGENCE_TRACKING.md  COMMIT_MESSAGE_JAN_15_2026.md  COMPLETE_EVOLUTION_SUMMARY.md  COMPLETE_SESSION_SUMMARY_JAN_10_2026.md  COMPREHENSIVE_AUDIT_REPORT_JAN_10_2026.md  COMPREHENSIVE_AUDIT_REPORT_JAN_3_2026_EVENING.md  CONTEXT.md  Cargo.toml  DEEP_DEBT_AUDIT_DISPLAY_SYSTEM_JAN_8_2026.md  DEEP_DEBT_EVOLUTION_SESSION_COMPLETE_JAN_3_2026.md  DEEP_DEBT_SESSION_SUMMARY.md  DEMO_GUIDE.md  DEPLOYMENT_GUIDE.md  (+105 more)
archive/crates/petal-tongue-modalities/: Cargo.toml
bingoCube/adapters/: Cargo.toml
bingoCube/adapters/src/: animation.rs  audio.rs  lib.rs  visual.rs
bingoCube/core/: Cargo.toml
bingoCube/core/src/: lib.rs
bingoCube/demos/: Cargo.toml
bingoCube/demos/src/: interactive.rs  main.rs
crates/doom-core/: Cargo.toml
crates/doom-core/src/: error.rs  instance.rs  key.rs  lib.rs  map_renderer.rs  raycast_renderer.rs  state.rs  tests.rs  wad_loader.rs
crates/petal-tongue-adapters/: Cargo.toml
crates/petal-tongue-adapters/src/: adapter_impl.rs  adapter_trait.rs  lib.rs  registry.rs
crates/petal-tongue-animation/: Cargo.toml
crates/petal-tongue-animation/src/: flower.rs  lib.rs  visual_flower.rs  visual_flower_tests.rs
crates/petal-tongue-api/: Cargo.toml
crates/petal-tongue-api/src/: biomeos_client.rs  biomeos_client_tests.rs  biomeos_error.rs  biomeos_jsonrpc_client.rs  lib.rs
crates/petal-tongue-api/tests/: integration_tests.rs  jsonrpc_socket_tests.rs
crates/petal-tongue-cli/: Cargo.toml
crates/petal-tongue-cli/src/: commands.rs  error.rs  handlers.rs  lib.rs  main.rs  output.rs  resolve.rs
crates/petal-tongue-core/: Cargo.toml
crates/petal-tongue-core/proptest-regressions/: dynamic_schema.txt  state_sync.txt
crates/petal-tongue-core/src/: adaptive_rendering.rs  awakening.rs  awakening_coordinator.rs  biomeos_discovery.rs  capabilities.rs  capability_discovery.rs  capability_names.rs  capability_registry.rs  capability_taxonomy.rs  channel.rs  common_config.rs  compute.rs  config.rs  config_system.rs  config_tests.rs  constants.rs  data_channel.rs  dynamic_schema.rs  engine.rs  engine_tests.rs  error.rs  error_tests.rs  event.rs  frame_introspection.rs  gate_mesh.rs  gpu_compute_provider.rs  graph_builder.rs  graph_engine.rs  graph_validation.rs  instance.rs  lib.rs  lib_tests.rs  lifecycle.rs  metrics.rs  modality.rs  or_exit.rs  platform_dirs.rs  primal_types.rs  property.rs  proprioception.rs  (+19 more)
crates/petal-tongue-core/tests/: biomeos_format_tests.rs  capability_integration_tests.rs  chaos_tests.rs  graph_engine_tests.rs  proptest_core.rs  sandbox_scenario_tests.rs  scenario_loader_tests.rs  sensory_matrix_validation.rs  session_tests.rs
crates/petal-tongue-discovery/: Cargo.toml
crates/petal-tongue-discovery/examples/: jsonrpc_demo.rs
crates/petal-tongue-discovery/src/: cache.rs  capabilities.rs  capability_parse.rs  concurrent.rs  demo_provider.rs  discovery_service_client.rs  discovery_service_provider.rs  dns_parser.rs  dynamic_scenario_provider.rs  errors.rs  http_provider.rs  jsonl_provider.rs  jsonrpc_provider.rs  known_visualization_provider.rs  lib.rs  mdns_discovery.rs  mdns_provider.rs  mock_provider.rs  neural_api_provider.rs  neural_graph_client.rs  neural_graph_client_tests.rs  offline_provider.rs  retry.rs  scenario_provider.rs  songbird_client.rs  songbird_provider.rs  traits.rs  unix_socket_provider.rs
crates/petal-tongue-discovery/tests/: chaos_and_fault_tests.rs  chaos_tests.rs  demo_provider_tests.rs  discovery_tests.rs  http_provider_tests.rs  jsonrpc_integration_tests.rs  live_integration_test.rs  mock_provider_tests.rs  offline_provider_tests.rs  songbird_integration_test.rs
crates/petal-tongue-entropy/: Cargo.toml
crates/petal-tongue-entropy/src/: audio.rs  awakening_audio.rs  error.rs  gesture.rs  lib.rs  narrative.rs  quality.rs  stream.rs  types.rs  visual.rs
crates/petal-tongue-entropy/tests/: entropy_tests.rs  quality_tests.rs
crates/petal-tongue-graph/: Cargo.toml
crates/petal-tongue-graph/src/: audio_export.rs  audio_export_error.rs  audio_playback.rs  audio_sonification.rs  audio_sonification_tests.rs  capability_validator.rs  chart_renderer.rs  clinical_theme.rs  color_utils.rs  domain_theme.rs  lib.rs  visual_2d.rs
crates/petal-tongue-graph/tests/: chaos_tests.rs
crates/petal-tongue-headless/: Cargo.toml
crates/petal-tongue-headless/src/: args.rs  baselines.rs  error.rs  graph_loader.rs  main.rs  render.rs
crates/petal-tongue-headless/tests/: e2e_tests.rs
crates/petal-tongue-ipc/: Cargo.toml
crates/petal-tongue-ipc/src/: btsp.rs  capability_detection.rs  client.rs  discovery_helpers.rs  http_client.rs  ipc_errors.rs  json_rpc.rs  json_rpc_client.rs  json_rpc_client_tests.rs  lib.rs  method_gate.rs  physics_bridge.rs  primal_registration.rs  primal_registration_error.rs  protocol.rs  provenance_trio.rs  provenance_trio_tests.rs  push_delivery.rs  resilience.rs  scene_signer.rs  (+11 more)
crates/petal-tongue-primitives/: Cargo.toml
crates/petal-tongue-scene/: Cargo.toml
crates/petal-tongue-telemetry/: Cargo.toml
crates/petal-tongue-tui/: Cargo.toml  README.md
crates/petal-tongue-types/: Cargo.toml
crates/petal-tongue-ui/: Cargo.toml
crates/petal-tongue-ui-core/: Cargo.toml
crates/petal-tongue-wasm/: Cargo.toml  README.md
sandbox/mock-biomeos/: Cargo.toml
(+1211 files in other folders)
