[workspace]
resolver = "2"
members = [
    "crates/petal-tongue-core",
    "crates/petal-tongue-graph",
    "crates/petal-tongue-animation",
    "crates/petal-tongue-telemetry",
    "crates/petal-tongue-api",
    "crates/petal-tongue-discovery",
    "crates/petal-tongue-entropy",
    "crates/petal-tongue-adapters",  # NEW: Adapter system
    "crates/petal-tongue-ipc",       # Phase 3: IPC
    "crates/petal-tongue-cli",       # Phase 3: CLI tools
    "crates/petal-tongue-ui-core",   # NEW: Pure Rust UI (Tier 1)
    "crates/petal-tongue-modalities", # NEW: Modality implementations
    "crates/petal-tongue-primitives", # NEW: UI infrastructure primitives (v2.0)
    "crates/petal-tongue-ui",        # Tier 2: Native GUI (egui)
    "crates/petal-tongue-tui",       # NEW: Rich TUI (Terminal UI)
    "crates/petal-tongue-headless",  # NEW: Headless binary (Tier 1 only)
    "crates/doom-core",              # Doom integration for platform testing
    # BingoCube is now a standalone tool at bingoCube/
    # (it has its own workspace with core, adapters, demos)
]

# NEW: UniBin configuration
[[bin]]
name = "petaltongue"
path = "src/main.rs"

[package]
name = "petaltongue-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[workspace.package]
version = "1.3.0"
edition = "2024"
license = "AGPL-3.0"
repository = "https://github.com/ecoPrimals/petalTongue"
authors = ["ecoPrimals Project"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Audio synthesis (OPTIONAL - requires ALSA libraries on Linux)
# Enable with feature: native-audio
# Install with: sudo apt-get install -y libasound2-dev pkg-config
# NOTE: These are NOT workspace dependencies because they're optional
# Each crate that needs them must declare them as optional local dependencies
rand = "0.8"

# Pure Rust audio file generation (no system dependencies)
hound = "3.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UI Framework (egui)
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.29"
egui_extras = "0.29"

# Graph visualization
egui_graphs = "0.22"
petgraph = "0.6"

# HTTP client (Pure Rust TLS via rustls - NO OpenSSL!)
# TRUE PRIMAL: 100% pure Rust networking stack
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "charset", "http2"] }
base64 = "0.21"

# Time and dates
chrono = "0.4"

# RPC frameworks for inter-primal communication
# Following ecosystem pattern: tarpc PRIMARY, JSON-RPC fallback, HTTPS optional
tarpc = { version = "0.34", features = ["full"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serde = "0.8"  # Must match tarpc's version
bincode = "1.3"

# Audio (placeholder - will use rodio or cpal in production)
# For now, we'll design the API without actual audio output

# UniBin dependencies (added for main.rs)
[dependencies]
# Core crates
petal-tongue-core = { path = "crates/petal-tongue-core" }
petal-tongue-discovery = { path = "crates/petal-tongue-discovery" }
petal-tongue-ui-core = { path = "crates/petal-tongue-ui-core" }
petal-tongue-graph = { path = "crates/petal-tongue-graph" }
petal-tongue-ipc = { path = "crates/petal-tongue-ipc" }

# Optional UI (can be disabled for minimal build)
petal-tongue-ui = { path = "crates/petal-tongue-ui", optional = true }
eframe = { workspace = true, optional = true }
egui = { workspace = true, optional = true }

# Web server
axum = { version = "0.7", features = ["tokio"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tower = { version = "0.4", features = ["util"] }

# Async runtime
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# System info (Pure Rust!)
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.10"

[features]
default = ["ui"]  # Desktop users get GUI by default
ui = ["petal-tongue-ui"]  # Can build without GUI for Pure Rust
