# SPDX-License-Identifier: AGPL-3.0-only
[workspace]
resolver = "2"
members = [
    "crates/petal-tongue-core",
    "crates/petal-tongue-graph",
    "crates/petal-tongue-animation",
    "crates/petal-tongue-telemetry",
    "crates/petal-tongue-api",
    "crates/petal-tongue-discovery",
    "crates/petal-tongue-entropy",
    "crates/petal-tongue-adapters",  # NEW: Adapter system
    "crates/petal-tongue-ipc",       # Phase 3: IPC
    "crates/petal-tongue-cli",       # Phase 3: CLI tools
    "crates/petal-tongue-ui-core",   # NEW: Pure Rust UI (Tier 1)
    "crates/petal-tongue-ui",        # Tier 2: Native GUI (egui)
    "crates/petal-tongue-tui",       # NEW: Rich TUI (Terminal UI)
    "crates/petal-tongue-headless",  # NEW: Headless binary (Tier 1 only)
    "crates/petal-tongue-scene",     # Declarative scene graph + modality compilers
    "crates/doom-core",              # Doom integration for platform testing
    # BingoCube is now a standalone tool at bingoCube/
    # (it has its own workspace with core, adapters, demos)
]

# NEW: UniBin configuration
[[bin]]
name = "petaltongue"
path = "src/main.rs"

[lints]
workspace = true

[package]
name = "petaltongue-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[workspace.package]
version = "1.6.2"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/ecoPrimals/petalTongue"
authors = ["ecoPrimals Project"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Zero-copy byte buffers (Bytes implements Serialize/Deserialize with serde feature)
bytes = { version = "1", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Audio synthesis (OPTIONAL - requires ALSA libraries on Linux)
# Enable with feature: native-audio
# Install with: sudo apt-get install -y libasound2-dev pkg-config
# NOTE: These are NOT workspace dependencies because they're optional
# Each crate that needs them must declare them as optional local dependencies
rand = "0.8"  # 0.9 (Jan 2025) has breaking changes; thread_rng/gen_range/random unchanged

# Pure Rust audio file generation (no system dependencies)
hound = "3.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UI Framework (egui)
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.29"
egui_extras = "0.29"

# Graph visualization
egui_graphs = "0.22"
egui_plot = "0.29"
petgraph = "0.6"

# HTTP client -- TLS-free for local IPC (biomeOS, discovery).
# HTTPS is delegated to beardog/songbird via biomeOS tower atomic.
# NO ring, NO aws-lc-sys, NO openssl -- ecoBin compliant.
reqwest = { version = "0.12", default-features = false, features = ["json", "charset", "http2", "stream"] }
base64 = "0.22"

# Time and dates
chrono = "0.4"

# Property testing
proptest = "1.4"

# RPC frameworks for inter-primal communication
# Following ecosystem pattern: tarpc PRIMARY, JSON-RPC fallback, HTTPS optional
tarpc = { version = "0.34", features = ["full"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serde = "0.8"  # Must match tarpc's version
bincode = "1.3"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
# Precision loss (usize->f64, u32->f32) is ubiquitous in visualization math
# and safe for data sizes under 2^52. Targeted for local #[expect] evolution.
cast_precision_loss = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
similar_names = "allow"
wildcard_imports = "warn"
doc_markdown = "allow"
default_trait_access = "allow"
wildcard_in_or_patterns = "allow"
items_after_statements = "allow"
# Nursery: significant_drop_tightening produces false positives in test code
# and is overly aggressive with RwLock guard patterns that are intentional.
significant_drop_tightening = "allow"
# Nursery: future_not_send is expected for egui-driven async code that
# uses non-Send types (egui::Context, etc.) in single-threaded UI loops.
future_not_send = "allow"
# Visualization math uses f32/f64 comparisons with epsilon checks.
float_cmp = "allow"
# Suboptimal flops (mul_add) - allow but evolve via local #[expect].
suboptimal_flops = "allow"
# needless_collect false positives on iterator patterns used for clarity.
needless_collect = "allow"
# mut ref not used mutably: pattern used for future API evolution, and
# some egui &mut callbacks require it structurally.
needless_pass_by_ref_mut = "allow"
# Float-comparison while loops are intentional in animation/interpolation.
while_float = "allow"
# Tuple-to-array: these patterns are used for egui Pos2/Vec2 conversions.
tuple_array_conversions = "allow"

# Audio (placeholder - will use rodio or cpal in production)
# For now, we'll design the API without actual audio output

# UniBin dependencies (added for main.rs)
[dependencies]
# Core crates
petal-tongue-core = { path = "crates/petal-tongue-core" }
petal-tongue-discovery = { path = "crates/petal-tongue-discovery" }
petal-tongue-ui-core = { path = "crates/petal-tongue-ui-core" }
petal-tongue-graph = { path = "crates/petal-tongue-graph" }
petal-tongue-ipc = { path = "crates/petal-tongue-ipc" }

# Optional UI (can be disabled for minimal build)
petal-tongue-ui = { path = "crates/petal-tongue-ui", optional = true }
petal-tongue-tui = { path = "crates/petal-tongue-tui" }
eframe = { workspace = true, optional = true }
egui = { workspace = true, optional = true }

# Web server
axum = { version = "0.7", features = ["tokio"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tower = { version = "0.4", features = ["util"] }

# Async runtime
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# System info (Pure Rust!)
num_cpus = "1.16"

# Scene engine (for examples and future integration)
petal-tongue-scene = { path = "crates/petal-tongue-scene" }

# Examples dependencies (optional, not in production)
# EVOLVED: libc removed - framebuffer_demo uses rustix (via petal-tongue-core)
png = { version = "0.17", optional = true }

[dev-dependencies]
petal-tongue-core = { path = "crates/petal-tongue-core", features = ["test-fixtures"] }
tempfile = "3.10"

[features]
default = ["ui"]
ui = ["petal-tongue-ui", "dep:eframe", "dep:egui"]
examples = ["png"]

[[example]]
name = "awakening_pure_rust"
required-features = ["ui"]

[[example]]
name = "framebuffer_demo"
required-features = ["ui", "examples"]

[[example]]
name = "display_demo"
required-features = ["ui"]

[[example]]
name = "pixel_renderer_demo"
required-features = ["ui", "examples"]

[[example]]
name = "pure_rust_gui_demo"
required-features = ["ui"]

[[example]]
name = "field_mode_demo"

[[example]]
name = "scene_engine_demo"
