[package]
name = "bingocube-adapters"
version = "0.1.0"
edition = "2021"
description = "Visualization adapters for BingoCube - helps systems render BingoCube data"
license = "AGPL-3.0"
repository = "https://github.com/ecoPrimals/petalTongue"
authors = ["ecoPrimals Project"]

[dependencies]
bingocube-core = { path = "../core" }

# Visual adapter dependencies (optional)
egui = { version = "0.29", optional = true }

# Audio adapter dependencies (optional)
# rodio = { version = "0.19", optional = true }

# Animation adapter dependencies (optional)
# petal-tongue-animation = { path = "../../crates/petal-tongue-animation", optional = true }

serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[features]
default = []
visual = ["egui"]
audio = []  # rodio when ALSA available
animation = []  # petal-tongue-animation when needed
all = ["visual", "audio", "animation"]

[dev-dependencies]

