[package]
name = "bingocube-core"
description = "Core BingoCube implementation: two-board cross-binding with progressive reveal"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/ecoPrimals/petalTongue"
authors = ["ecoPrimals Project"]

[dependencies]
blake3 = "1.5"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]

