[package]
name = "bingocube-demos"
version = "0.1.0"
edition = "2021"
description = "Interactive demonstrations of BingoCube"
license = "AGPL-3.0"
repository = "https://github.com/ecoPrimals/petalTongue"
authors = ["ecoPrimals Project"]

[[bin]]
name = "bingocube-demo"
path = "src/main.rs"

[dependencies]
bingocube-core = { path = "../core" }
bingocube-adapters = { path = "../adapters", features = ["visual"] }

eframe = "0.29"
egui = "0.29"
tracing = "0.1"
tracing-subscriber = "0.3"

