# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "doom-core"
description = "Doom integration for petalTongue platform testing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"

