# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "doom-core"
description = "Doom integration for petalTongue platform testing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bytes = { workspace = true }
petal-tongue-scene = { path = "../petal-tongue-scene" }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"

