[package]
name = "petal-tongue-adapters"
version = "0.1.0"
edition = "2021"
authors = ["ecoPrimals Project"]
description = "Ecosystem-specific adapters for petalTongue universal visualization"
license = "AGPL-3.0-only"

[dependencies]
# Core dependencies
petal-tongue-core = { path = "../petal-tongue-core" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UI (for rendering adapters)
egui = "0.29"

# Async runtime (for capability discovery)
tokio = { version = "1", features = ["full"] }

# HTTP client (for querying ecosystem specs)
reqwest = { workspace = true }  # Use workspace version (0.12 with rustls-tls)

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
# Enable specific ecosystem adapters as features
ecoprimal = []  # ecoPrimals-specific adapters

