# SPDX-License-Identifier: AGPL-3.0-or-later
[lints]
workspace = true

[package]
name = "petal-tongue-adapters"
version = "1.6.6"
edition.workspace = true
authors = ["ecoPrimals Project"]
description = "Ecosystem-specific adapters for petalTongue universal visualization"
license.workspace = true

[dependencies]
# Core dependencies
petal-tongue-core = { path = "../petal-tongue-core" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UI (for rendering adapters)
egui = { workspace = true }

# Async runtime (for capability discovery)
tokio = { workspace = true }

# HTTP client (for querying ecosystem specs)
reqwest = { workspace = true }  # Use workspace version (0.12 with rustls-tls)

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
# Enable specific ecosystem adapters as features
ecoprimal = []  # ecoPrimals-specific adapters

