# SPDX-License-Identifier: AGPL-3.0-or-later
[lints]
workspace = true

[package]
name = "petal-tongue-adapters"
description = "Ecosystem-specific adapters for petalTongue universal visualization"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies
petal-tongue-core = { path = "../petal-tongue-core" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UI (for rendering adapters)
egui = { workspace = true }

# Async runtime (for capability discovery)
tokio = { workspace = true }

# HTTP client (for querying ecosystem specs)
reqwest = { workspace = true }  # Workspace: HTTP-only, no TLS (ecoBin: no ring/openssl)

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []

