# SPDX-License-Identifier: AGPL-3.0-or-later
[lints]
workspace = true

[package]
name = "petal-tongue-animation"
description = "Flow animation engine for visualizing primal interactions and data movement"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
egui = { workspace = true, optional = true }

[features]
default = []
# Enable egui for full coverage: cargo llvm-cov -p petal-tongue-animation --features egui
egui = ["dep:egui"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
