# SPDX-License-Identifier: AGPL-3.0-or-later
[lints]
workspace = true

[package]
name = "petal-tongue-api"
description = "BiomeOS API client for primal discovery and topology retrieval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
petal-tongue-core = { path = "../petal-tongue-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[features]
# Mock/test data - Run tests with: cargo test --features test-fixtures
test-fixtures = []

[dev-dependencies]
petal-tongue-core = { path = "../petal-tongue-core", features = ["test-fixtures"] }
tokio = { workspace = true, features = ["test-util", "macros"] }
wiremock = "0.6"
tempfile = "3.8"
