# SPDX-License-Identifier: AGPL-3.0-or-later
[lints]
workspace = true

[package]
name = "petal-tongue-cli"
description = "Command-line interface library for managing petalTongue instances"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "petal_tongue_cli"
path = "src/lib.rs"

[dependencies]
petal-tongue-core = { path = "../petal-tongue-core" }
petal-tongue-ipc = { path = "../petal-tongue-ipc" }
tokio = { workspace = true, features = ["full"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
colored = "2.1"
uuid = "1.9"

[dev-dependencies]
petal-tongue-core = { path = "../petal-tongue-core", features = ["test-fixtures"] }
tempfile = "3.8"
tokio = { workspace = true, features = ["rt", "macros"] }

