# SPDX-License-Identifier: AGPL-3.0-or-later
[lints]
workspace = true

[package]
name = "petal-tongue-cli"
description = "Command-line interface library for managing petalTongue instances"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "petal_tongue_cli"
path = "src/lib.rs"

[dependencies]
petal-tongue-core = { path = "../petal-tongue-core" }
petal-tongue-ipc = { path = "../petal-tongue-ipc" }
tokio = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
colored = "2.1"
uuid = { workspace = true }

[dev-dependencies]
petal-tongue-core = { path = "../petal-tongue-core", features = ["test-fixtures"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

