# SPDX-License-Identifier: AGPL-3.0-or-later
[lints]
workspace = true

[package]
name = "petal-tongue-core"
description = "Universal UI and Visualization System"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
petal-tongue-types = { path = "../petal-tongue-types" }
petal-tongue-scene = { path = "../petal-tongue-scene" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
# WebSocket for biomeOS real-time topology/health subscription
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Instance management
uuid = { version = "1.7", features = ["v4", "serde"] }
ron = "0.8"
toml = "0.8"
# Universal Rendering System dependencies
indexmap = "2.0"
# System information (Pure Rust Unix syscalls - EVOLVED from libc!)
# EVOLUTION: Migrated from libc to rustix for 100% safe Rust
rustix = { version = "0.38", features = ["process"] }
# Terminal dimensions for CLI/adaptive rendering (screen size detection)
terminal_size = "0.4"

temp-env = { version = "0.3", optional = true, features = ["async_closure"] }

[features]
default = []
test-fixtures = ["dep:temp-env"]

[build-dependencies]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3.8"
temp-env = { version = "0.3", features = ["async_closure"] }
proptest = { workspace = true }
