# SPDX-License-Identifier: AGPL-3.0-or-later
[lints]
workspace = true

[package]
name = "petal-tongue-core"
description = "Universal UI and Visualization System"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
petal-tongue-types = { path = "../petal-tongue-types" }
petal-tongue-scene = { path = "../petal-tongue-scene" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
# WebSocket for biomeOS real-time topology/health subscription
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# Instance management
uuid = { workspace = true }
ron = { workspace = true }
toml = { workspace = true }
# Universal Rendering System dependencies
indexmap = { workspace = true }
# System information (Pure Rust Unix syscalls - EVOLVED from libc!)
# EVOLUTION: Migrated from libc to rustix for 100% safe Rust
rustix = { workspace = true, features = ["process"] }
# Terminal dimensions for CLI/adaptive rendering (screen size detection)
terminal_size = { workspace = true }

temp-env = { workspace = true, optional = true }

[features]
default = []
test-fixtures = ["dep:temp-env"]

[build-dependencies]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = { workspace = true }
temp-env = { workspace = true }
proptest = { workspace = true }
